apps/speedtest/templates/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: speedtest
  namespace: speedtest
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    hajimari.io/appName: Speedtest
    hajimari.io/icon: speedometer
spec:
  parentRefs:
  - name: public-gateway
    namespace: kube-system
    sectionName: https
  hostnames:
  - speedtest.lajas.tech
  rules:
  - matches:
    - path:
        type: PathPrefix
        value: /
    backendRefs:
    - name: speedtest
      port: 80
